--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.0.0",
-    "babel-preset-env": "^1.6.0"
+    "babel-preset-env": "^1.6.0",
+    "quadtree-lib": "^1.0.7",
+    "snapsvg": "^0.5.1"
   }
 }
