going to try paper.js instead?

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "quadtree-lib": "^1.0.7",
     "snapsvg": "^0.5.1",
     "webpack": "^3.4.1"
+  },
+  "dependencies": {
+    "svg.intersections.js": "^1.1.3"
   }
 }
