give up on google closure library

--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "babel-cli": "^6.0.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
+    "closure-loader": "^0.3.1",
     "quadtree-lib": "^1.0.7",
     "snapsvg": "^0.5.1",
-    "webpack": "^3.4.1"
+    "webpack": "^2.7.0"
   },
   "dependencies": {
     "svg.intersections.js": "^1.1.3"
